deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rapidlink
  labels:
    name: rapidlink
