deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rapidlink
  namespace: rapidlink
spec:
  selector:
    matchLabels:
      app: rapidlink
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rapidlink
    spec:
      imagePullSecrets:
        - name: harbor
      # initContainers:
      # Init containers are exactly like regular containers, except:
      # - Init containers always run to completion.
      # - Each init container must complete successfully before the next one starts.
      containers:
        - name: rapidlink
          image: MYAPP:latest
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 150Mi
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 5000
              name: rapidlink
      restartPolicy: Always
