deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rapidlink-service
  namespace: rapidlink
spec:
  selector:
    app: rapidlink
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: rapidlink-https
      protocol: TCP
      port: 80
      targetPort: 5000
